--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/plugin-users-permissions": "4.10.6",
     "@strapi/provider-upload-aws-s3": "^4.10.7",
     "@strapi/strapi": "4.10.6",
-    "pg": "8.8.0"
+    "pg": "^8.11.0",
+    "pg-connection-string": "^2.6.0"
   },
   "author": {
     "name": "A Strapi developer"
