feat: add egine node version

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "uuid": "5d2b67aa-c966-4b37-87de-e6b77a06009b"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "^16.19.1",
+    "npm": "^8.19.3"
   },
   "license": "MIT"
 }
